--- a/requirements.txt
+++ b/requirements.txt
@@ -22,9 +22,11 @@ pycparser==2.20
 PyHamcrest==2.0.2
 pyOpenSSL==20.0.1
 pytz==2021.1
+selenium==3.141.0
 service-identity==18.1.0
 six==1.15.0
 sqlparse==0.4.1
 Twisted==20.3.0
 txaio==21.2.1
+urllib3==1.26.3
 zope.interface==5.2.0
