--- a/requirements.txt
+++ b/requirements.txt
@@ -4,24 +4,34 @@ async-timeout==3.0.1
 attrs==20.3.0
 autobahn==21.2.1
 Automat==20.2.0
+certifi==2020.12.5
 cffi==1.14.5
 -e channels==3.0.3
 channels-redis==3.2.0
+chardet==4.0.0
 constantly==15.1.0
 cryptography==3.4.6
 daphne==3.0.1
+defusedxml==0.7.1
 Django==3.1.7
+django-allauth==0.44.0
+django-crispy-forms==1.11.1
 hiredis==1.1.0
 hyperlink==21.0.0
-idna==3.1
+idna==2.10
 incremental==17.5.0
 msgpack==1.0.2
+oauthlib==3.1.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyHamcrest==2.0.2
+PyJWT==2.0.1
 pyOpenSSL==20.0.1
+python3-openid==3.2.0
 pytz==2021.1
+requests==2.25.1
+requests-oauthlib==1.3.0
 selenium==3.141.0
 service-identity==18.1.0
 six==1.15.0
