--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ autobahn==21.2.1
 Automat==20.2.0
 certifi==2020.12.5
 cffi==1.14.5
--e channels==3.0.3
+channels==3.0.3
 channels-redis==3.2.0
 chardet==4.0.0
 constantly==15.1.0
