--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,133 @@
+aiobotocore==1.2.0
+aiohttp==3.7.3
+aioitertools==0.7.1
 aioredis==1.3.1
+altgraph==0.16.1
+appdirs==1.4.4
 asgiref==3.3.1
+astroid==2.4.2
 async-timeout==3.0.1
 attrs==20.3.0
 autobahn==21.2.1
 Automat==20.2.0
-certifi==2020.12.5
-cffi==1.14.5
+awsebcli==3.19.4
+beautifulsoup4==4.9.1
+blinker==1.4
+botocore==1.19.52
+bs4==0.0.1
+cement==2.8.2
+certifi==2020.4.5.1
+cffi==1.14.3
 channels==3.0.3
 channels-redis==3.2.0
-chardet==4.0.0
+chardet==3.0.4
+Click==7.0
+colorama==0.4.3
 constantly==15.1.0
-cryptography==3.4.6
+cryptography==3.2.1
 daphne==3.0.1
-defusedxml==0.7.1
+db.py==0.5.3
+decorator==4.4.1
+defusedxml==0.6.0
+distlib==0.3.1
 dj-database-url==0.5.0
-Django==3.1.7
-django-allauth==0.44.0
-django-crispy-forms==1.11.1
+Django==3.0.7
+django-allauth==0.43.0
+django-ckeditor==5.9.0
+django-cleanup==5.0.0
+django-countries==6.1.3
+django-crispy-forms==1.9.2
 django-heroku==0.3.1
+django-js-asset==1.2.2
 djangorestframework==3.12.2
-gunicorn==20.0.4
-hiredis==1.1.0
+dnspython==1.16.0
+email-validator==1.1.1
+filelock==3.0.12
+Flask==1.1.1
+Flask-Admin==1.5.6
+Flask-Email==1.4.4
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-MySQLdb==0.2.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+fsspec==0.8.5
+future==0.16.0
+hiredis==2.0.0
 hyperlink==21.0.0
-idna==2.10
+idna==2.9
+importlib-metadata==3.4.0
 incremental==17.5.0
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.10.3
+jmespath==0.10.0
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
 msgpack==1.0.2
+multidict==5.1.0
+mysqlclient==1.4.6
+numpy==1.19.1
 oauthlib==3.1.0
+openpy==0.0.2
+pandas==1.1.0
+parser-libraries==3.6
+passlib==1.7.2
+pathspec==0.5.9
+pefile==2019.4.18
+Pillow==7.2.0
+prettytable==0.7.2
 psycopg2==2.8.6
+public==2019.4.13
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pybars3==0.9.7
 pycparser==2.20
 PyHamcrest==2.0.2
-PyJWT==2.0.1
+PyInstaller==3.5
+PyJWT==1.7.1
+pylint==2.5.3
+PyMeta3==0.5.1
+PyMySQL==1.0.2
 pyOpenSSL==20.0.1
+pypiwin32==223
+PyQt5==5.13.2
+PyQt5-sip==12.7.0
+pyTelegramBotAPI==3.7.6
+python-dateutil==2.8.1
+python-decouple==3.3
 python3-openid==3.2.0
-pytz==2021.1
-requests==2.25.1
+pytz==2020.1
+pywin32==300
+pywin32-ctypes==0.2.0
+PyYAML==5.3.1
+redis==3.5.3
+requests==2.23.0
 requests-oauthlib==1.3.0
+s3fs==0.5.2
 selenium==3.141.0
+self==2019.4.13
+semantic-version==2.8.5
 service-identity==18.1.0
-six==1.15.0
-sqlparse==0.4.1
+six==1.14.0
+soupsieve==2.0.1
+SQLAlchemy==1.3.18
+sqlparse==0.3.1
+stripe==2.55.0
+termcolor==1.1.0
+toml==0.10.1
 Twisted==20.3.0
 txaio==21.2.1
-urllib3==1.26.3
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+urllib3==1.25.9
+virtualenv==20.4.0
+wcwidth==0.1.9
+Werkzeug==0.16.0
 whitenoise==5.2.0
+wrapt==1.12.1
+WTForms==2.3.1
+yarl==1.6.3
+zipp==3.4.0
 zope.interface==5.2.0
