--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
+selenium==3.141.0
 service-identity==18.1.0
 six==1.15.0
 sqlparse==0.4.1
